add background image

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -54,13 +54,16 @@ body {
 header {
     height: 100%;
     font-family: 'Josefin Sans', sans-serif;
-    @include flex(center, center, row)
+    @include flex(center, stretch, row)
 }
 
 .header-main {
     width: 57.64%;
     height: 100%;
     padding: 0 13.75rem 0 10.313rem;
+    background-image: url(../images/bg-pattern-desktop.svg);
+    background-size: cover;
+    background-repeat: repeat;
 }
 
 .header-img--mobile {
@@ -116,6 +119,7 @@ header {
 }
 
 .h-subscribe {
+    padding-bottom: 5rem;
 
     form {
         margin: 0;
