--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,9 +59,9 @@ header {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
   -webkit-box-direction: row;
   -ms-flex-direction: row;
   flex-direction: row; }
@@ -69,7 +69,10 @@ header {
 .header-main {
   width: 57.64%;
   height: 100%;
-  padding: 0 13.75rem 0 10.313rem; }
+  padding: 0 13.75rem 0 10.313rem;
+  background-image: url(../images/bg-pattern-desktop.svg);
+  background-size: cover;
+  background-repeat: repeat; }
 
 .header-img--mobile {
   display: none; }
@@ -113,33 +116,33 @@ header {
   padding: 0 1.5rem 0 0;
   margin-bottom: 3.125rem; }
 
-.h-subscribe form {
-  margin: 0; }
-
-.h-subscribe input[type="email"] {
-  height: 56px;
-  width: 445px;
-  mix-blend-mode: normal;
-  opacity: 0.5;
-  border: 1px solid #ce9797;
-  box-sizing: border-box;
-  border-radius: 28px;
-  padding: 1.125rem; }
-  .h-subscribe input[type="email"]::placeholder {
-    font-weight: 300;
-    font-size: 1rem;
-    font-family: 'Josefin Sans', sans-serif; }
-
-.h-subscribe button {
-  position: relative;
-  width: 100px;
-  height: 56px;
-  left: 345px;
-  bottom: 56px;
-  background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
-  box-shadow: 0px 15px 20px 0 rgba(198, 110, 110, 0.247569);
-  border: none;
-  border-radius: 28px; }
+.h-subscribe {
+  padding-bottom: 5rem; }
+  .h-subscribe form {
+    margin: 0; }
+  .h-subscribe input[type="email"] {
+    height: 56px;
+    width: 445px;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    border: 1px solid #ce9797;
+    box-sizing: border-box;
+    border-radius: 28px;
+    padding: 1.125rem; }
+    .h-subscribe input[type="email"]::placeholder {
+      font-weight: 300;
+      font-size: 1rem;
+      font-family: 'Josefin Sans', sans-serif; }
+  .h-subscribe button {
+    position: relative;
+    width: 100px;
+    height: 56px;
+    left: 345px;
+    bottom: 56px;
+    background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
+    box-shadow: 0px 15px 20px 0 rgba(198, 110, 110, 0.247569);
+    border: none;
+    border-radius: 28px; }
 
 @media screen and (max-width: 375px) {
   .header-main {
