--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -142,6 +142,13 @@ header {
         }
     }
 
+    input:focus,
+    select:focus,
+    textarea:focus,
+    button:focus {
+        outline: none;
+    }
+
     button {
         position: relative;
         width: 100px;
@@ -153,6 +160,18 @@ header {
         border: none;
         border-radius: 28px;
     }
+}
+
+.h-subscribe__alert {
+    font-family: Josefin Sans;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.75rem;
+    letter-spacing: 0px;
+    text-align: left;
+    color: $soft-red;
+    display: none;
 }
 
 @media screen and (max-width: 375px) {
