--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -68,9 +68,9 @@ header {
   flex-direction: row; }
 
 .header-main {
+  min-height: 100vh;
   width: 57.64%;
-  height: 100%;
-  padding: 0 13.75rem 0 10.313rem;
+  padding: 0 0 0 18.33%;
   background-color: linear-gradient(135deg, white, #fff5f5);
   background-image: url(../images/bg-pattern-desktop.svg);
   background-size: cover;
@@ -81,9 +81,10 @@ header {
 
 .header-img--desktop {
   width: 42.36%;
-  height: 100%; }
-  .header-img--desktop img {
-    height: 100%; }
+  min-height: 100vh;
+  background-image: url(../images/hero-desktop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 .h-logo {
   margin-top: 4.125rem; }
@@ -93,7 +94,8 @@ header {
   font-style: normal;
   letter-spacing: 17.320634841918945px;
   text-align: left;
-  margin: 8.5rem 0 2rem 0; }
+  margin: 8.5rem 0 2rem 0;
+  padding: 0 38.89% 0 0; }
 
 .h-heading--light {
   font-weight: 200;
@@ -115,22 +117,22 @@ header {
   letter-spacing: 0px;
   text-align: left;
   color: #ce9797;
-  padding: 0 1.5rem 0 0;
+  padding: 0 38.89% 0 0;
   margin-bottom: 3.125rem; }
 
-.h-subscribe {
-  padding-bottom: 5rem; }
-  .h-subscribe form {
-    margin: 0; }
-  .h-subscribe input:focus,
-  .h-subscribe select:focus,
-  .h-subscribe textarea:focus,
-  .h-subscribe button:focus {
-    outline: none; }
+.h-subscribe form {
+  margin: 0; }
+
+.h-subscribe input:focus,
+.h-subscribe select:focus,
+.h-subscribe textarea:focus,
+.h-subscribe button:focus {
+  outline: none; }
 
 .h-subscribe__input {
   height: 56px;
-  width: 445px;
+  width: 53.61%;
+  max-width: 445px;
   mix-blend-mode: normal;
   opacity: 0.5;
   border: 1px solid #ce9797;
@@ -143,15 +145,16 @@ header {
     font-family: 'Josefin Sans', sans-serif; }
 
 .h-subscribe__btn {
-  position: relative;
   width: 100px;
   height: 56px;
-  left: 77.53%;
-  bottom: 56px;
   background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
   box-shadow: 0px 15px 20px 0 rgba(198, 110, 110, 0.247569);
   border: none;
-  border-radius: 28px; }
+  border-radius: 28px;
+  position: relative;
+  right: 105px;
+  top: 5px;
+  z-index: 4; }
 
 .h-subscribe__error {
   font-family: Josefin Sans;
@@ -164,14 +167,14 @@ header {
   color: #f96262;
   display: none;
   position: relative;
-  bottom: 50px;
+  top: 8px;
   left: 20px; }
   .h-subscribe__error::after {
     content: url(../images/icon-error.svg);
     display: block;
     position: relative;
     bottom: 74px;
-    left: 260px; }
+    left: 30%; }
 
 .js-show {
   display: block; }
